# LiveObjects-iotSoftbox-mqtt-linux

./: .gitignore  .gitmodules  CMakeLists.txt  ChangeLog.md  LICENSE.txt  README.md  THIRD-PARTY.txt
cmake-utilities/: cppcheck.cmake  cpplint.cmake
config-template/: liveobjects_dev_params.h  liveobjects_dev_security.h
examples/: README.md
examples/liveobjects_sample_basic/: CMakeLists.txt  README.md  basic.c
examples/liveobjects_sample_basic/config/: liveobjects_dev_config.h  liveobjects_dev_params.h
examples/liveobjects_sample_minimal/: CMakeLists.txt  README.md  minimal.c
examples/liveobjects_sample_minimal/config/: liveobjects_dev_security.h
examples/liveobjects_sample_update/: CMakeLists.txt  README.md  update.c
examples/liveobjects_sample_update/config/: liveobjects_dev_params.h  liveobjects_dev_security.h
mbedtls_configs/: liveobjects_mbedtls_custom_config.h
mqtt_live_objects/: liveobjects_iotsoftbox_api.h
script/: cmakeWinSetup.bat  deb_maker.sh  runCppcheck.sh  wiringPiInstaller.sh
wiki/: detailed-windows-setup.md
